# mm-opera-hpc

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: ci.yml
bubble/: CMakeLists.txt  Elasticity.mfront  README.md  ReadMe.md  bubbles.txt  post_process_bubble2.py
bubble/include/Common/: Memory.hxx  Print.hxx
bubble/include/OperaHPC/: BoundaryElsUtilities.hxx  BubbleDescription.hxx  Utilities.hxx
bubble/mesh/: mesh_sphere.geo  mesh_sphere.msh  single_bubble.txt  single_bubble_ci.txt  single_sphere.geo
bubble/scripts/: plot_bubbles.py
bubble/src/: BoundaryElsUtilities.cxx  Bubble.cxx  BubbleDescription.cxx  Utilities.cxx
bubble/verification/: mmm_vs_analytical.py
cermet/: CMakeLists.txt  README.md  cermet-elasticity.cxx  cermet-norton-bm.cxx  cermet-norton.cxx  cermet.cxx  check_cermet_restults.py  plot_cermet_results.py
cermet/law/: .NortonCr.mfront.swp  Mono_UO2_CosH_Jaco.mfront  NortonCr.mfront
cermet/mesh/: 5grains.geo  5grains.py  cermet-opera-hpc-mini.py  vectors_5grains.txt
cermet/randomVectorGeneration/: generate_random_vectors.py
cermet/results/: cermet_cast3m.csv
cmake/modules/: FindMFEM.cmake
include/MM_OPERA_HPC/: Config.hxx  GrainOrientations.hxx  MacroscropicElasticMaterialProperties.hxx  UniaxialMacroscopicStressPeriodicSimulation.hxx  Utilities.hxx
mesh/: mesh_opera.py
polycrystal/: CMakeLists.txt  README.md  UniaxialElastic.cxx  UniaxialElasticOrtho.cxx  UniaxialNonLinearElastic.cxx  UniaxialPolycristal.cxx  UniaxialPolycrystal.cxx  check_polycrystal_restults.py  common.hxx  plot_polycrystal_results.py
polycrystal/castem/: MonoCristal_UO2.dgibi
polycrystal/include/MFront/Castem/: umatMonoCristal_UO2.hxx
polycrystal/include/MFront/GenericBehaviour/: MonoCristal_UO2-generic.hxx
polycrystal/include/TFEL/Material/: MonoCristal_UO2.hxx  MonoCristal_UO2BehaviourData.hxx  MonoCristal_UO2IntegrationData.hxx  MonoCristal_UO2SlipSystems.hxx  MonoCristal_UO2SlipSystems.ixx
polycrystal/law/: Mono_UO2_CosH_Jaco3.mfront
polycrystal/mesh/: 1000crystals.py  5cristals.geo  5cristals.med  5cristals.msh  5cristals.py  5crystals.geo  5crystals.py  vectors_1000crystals.txt
polycrystal/results/: polycrystal_cast3m.csv
polycrystal/src/: Makefile.mfront  MonoCristal_UO2.cxx  MonoCristal_UO2.d  targets.lst  umatMonoCristal_UO2.cxx  umatMonoCristal_UO2.d
src/: CMakeLists.txt  GrainOrientations.cxx  MacroscropicElasticMaterialProperties.cxx  UniaxialMacroscopicStressPeriodicSimulation.cxx  Utilities.cxx
verification/bubble/: mmm_vs_analytical.py
